<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app"
    android:orientation="vertical"
    android:padding="@dimen/padding_default"
    tools:context=".uis.activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="0dp"
        android:fitsSystemWindows="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/buttonGoHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_home_active" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/block_margin"
                android:text="@string/register"
                android:theme="@style/Heading25" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:paddingEnd="@dimen/input_height"
                android:text="@string/sub_heading_register"
                android:theme="@style/SubHeading11"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_edit_text"
                style="@style/OutlineEditTextLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="@dimen/margin30"
                android:hint="@string/email"
                app:placeholderText="@string/email_placeholder">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusForward="@id/user_name_edit_text"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name_edit_text"
                style="@style/OutlineEditTextLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="@dimen/block_margin"
                android:hint="@string/user_name"
                app:placeholderText="@string/email_placeholder">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusForward="@id/password_edit_text"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_edit_text"
                style="@style/OutlineEditTextLayoutPasswordStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="@dimen/block_margin"
                android:hint="@string/password"
                app:placeholderText="@string/password_placeholder">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:nextFocusForward="@id/re_password_edit_text"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/re_password_edit_text"
                style="@style/OutlineEditTextLayoutPasswordStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="@dimen/block_margin"
                android:hint="@string/re_password"
                app:placeholderText="@string/password_placeholder">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:nextFocusForward="@id/button_register"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_register"
                style="@style/ButtonAppStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/margin30"
                android:text="Đăng ký" />

            <include layout="@layout/indicator_view" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_login_google"
                style="@style/ButtonAppStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/continue_with_google"
                android:textColor="@color/bg_app"
                app:backgroundTint="@color/white"
                app:icon="@drawable/ic_google"
                app:iconGravity="start"
                app:iconTint="@null" />

            <TextView
                android:id="@+id/goToLogin"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin30"
                android:layout_weight="1"
                android:autoLink="all"
                android:gravity="bottom"
                android:linksClickable="true"
                android:selectAllOnFocus="false"
                android:text="@string/go_to_login"
                android:theme="@style/Text13_Semi_Bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>